--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.6.14
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   hive_generator: ^2.0.0
@@ -43,13 +44,19 @@ dependencies:
   path_provider: ^2.0.11
   percent_indicator: ^4.2.2
   rxdart: ^0.27.7
+  share_plus: ^6.3.1
 
 dev_dependencies:
   build_runner: ^2.3.3
+  flutter_launcher_icons: ^0.12.0
   flutter_lints: ^2.0.0
   flutter_test:
     sdk: flutter
 
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
@@ -61,6 +68,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/logo.png
+    - assets/privacypolicy.md
+    - assets/termsandconditions.md
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
