--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.2
   flutter_markdown: ^0.6.14
   hive: ^2.2.3
   hive_flutter: ^1.1.0
@@ -48,6 +49,7 @@ dependencies:
 
 dev_dependencies:
   build_runner: ^2.3.3
+  equatable: ^2.0.5
   flutter_launcher_icons: ^0.12.0
   flutter_lints: ^2.0.0
   flutter_test:
